Add queue config to env file
Signed-off-by: Brendan Bullen <66941+bullenb@users.noreply.github.com>

--- a/.docker/.env.example
+++ b/.docker/.env.example
@@ -36,3 +36,7 @@ NGINX_HTTP_PORT_HOST=
 
 # workspace
 WORKSPACE_SSH_PORT_HOST=
+
+# php-worker
+PHP_WORKER_PROCESS_NUMBER=2
+PHP_WORKER_COMMAND_ARGS="--sleep=3 --tries=1 --daemon --memory=1024 --timeout=0 --queue=high,default,low"
